@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-20T16:34:16Z",
+  "timestamp" : "2022-05-21T01:37:50Z",
   "count_outdated" : 131,
   "uniques_outdated" : 51,
-  "count" : 174,
-  "uniques" : 75,
+  "count" : 177,
+  "uniques" : 78,
   "clones" : [
     {
       "timestamp": "2022-05-08T00:00:00Z",
@@ -91,10 +91,10 @@
     },
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 5, 7 ],
-      "uniques": 5,
-      "uniques_minmax": [ 4, 5 ]
+      "count": 10,
+      "count_minmax": [ 5, 10 ],
+      "uniques": 8,
+      "uniques_minmax": [ 4, 8 ]
     }
   ]
 }
