@@ -1,6 +1,6 @@
 {
-  "count": 43,
-  "uniques": 8,
+  "count": 46,
+  "uniques": 11,
   "clones": [
     {
       "timestamp": "2022-05-08T00:00:00Z",
@@ -64,8 +64,8 @@
     },
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 7,
-      "uniques": 5
+      "count": 10,
+      "uniques": 8
     }
   ]
 }
