@@ -1,3 +1,10 @@
+2022-05-21T01:37:50Z:
+* notice: last 14d: unq all: 11 46
+* notice: prev accum: outdated-unq outdated-all / unq all: 51 131 / 75 174
+* notice: next accum: outdated-unq outdated-all / unq all: 51 131 / 78 177
+* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +8 +10 -0 -0 / 8 10
+* notice: changed dates: [2022-05-20]
+
 2022-05-20T16:34:16Z:
 * notice: last 14d: unq all: 8 43
 * notice: prev accum: outdated-unq outdated-all / unq all: 50 130 / 74 172
